--- a/Buscaminas/nbproject/project.properties
+++ b/Buscaminas/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=buscaminas.Buscaminas
+main.class=buscaminasModel.Buscaminas
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
