Participacion de la base de datos presente

--- a/Buscaminas/nbproject/project.properties
+++ b/Buscaminas/nbproject/project.properties
@@ -32,7 +32,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.CommonBuscaminas.jar}
+    ${reference.CommonBuscaminas.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
