Partida nueva - Unirse a partida
* agregar a partida variable de control si inicio o no
* metodo buscar partida no inciada
* Crear metodo comenzarPartida, si la partida cambia el estado a comenzada
				actualizar saldos
				cambiar estado
* chequear si tiene saldo suficiente para nueva partida apuesta inicial

* chequear si puede pagar apuesta de partida ya iniciada antes de unirse

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /Buscaminas/nbproject/private/
 /Buscaminas/build/
 /BuscaminasCliente/nbproject/private/
+/CommonBuscaminas/nbproject/private/
+/CommonBuscaminas/build/
+/BuscaminasCliente/build/
+/CommonBuscaminas/dist/
+/BuscaminasCliente/dist/
+/Buscaminas/dist/
